change main accounts

--- a/Controller/src/main/prod/merchants/lisk.properties
+++ b/Controller/src/main/prod/merchants/lisk.properties
@@ -1,6 +1,6 @@
 lisk.node.host=http://ip-172-31-14-168.us-east-2.compute.internal:8000
-lisk.main.address=9022310477640438519L
-lisk.main.secret=game police minimum pitch damp symptom until double hire flower spray gorilla
+lisk.main.address=11069838797124010917L
+lisk.main.secret=
 lisk.min.confirmations=300
 lisk.tx.sort.prefix=
 lisk.tx.queryLimit=1000
