add btc property - enable or disable node

--- a/Controller/src/main/prod/merchants/litecoin_wallet.properties
+++ b/Controller/src/main/prod/merchants/litecoin_wallet.properties
@@ -3,3 +3,4 @@ backup.folder=/data/.litecoin/ltc_backup/
 node.propertySource=node_config/node_config_ltc.properties
 node.zmqEnabled=true
 node.supportInstantSend=false
+node.isEnabled=true
