--- a/Controller/src/main/dev/merchants/bca_wallet.properties
+++ b/Controller/src/main/dev/merchants/bca_wallet.properties
@@ -3,3 +3,4 @@ backup.folder=${user.home}\\bca_backup\\
 node.propertySource=node_config/node_config_bca.properties
 node.zmqEnabled=true
 node.supportInstantSend=false
+node.isEnabled=false
