--- a/Controller/src/main/dev/merchants/bitcoin_cash_wallet.properties
+++ b/Controller/src/main/dev/merchants/bitcoin_cash_wallet.properties
@@ -3,3 +3,4 @@ backup.folder=${user.home}\\bch_backup\\
 node.propertySource=node_config/node_config_bch.properties
 node.zmqEnabled=false
 node.supportInstantSend=false
+node.isEnabled=false
