--- a/Controller/src/main/dev/merchants/btcz_wallet.properties
+++ b/Controller/src/main/dev/merchants/btcz_wallet.properties
@@ -3,3 +3,4 @@ backup.folder=${user.home}\\btcz_backup\\
 node.propertySource=node_config/node_config_btcz.properties
 node.zmqEnabled=false
 node.supportInstantSend=false
+node.isEnabled=false
