--- a/Controller/src/main/dev/merchants/dash_wallet.properties
+++ b/Controller/src/main/dev/merchants/dash_wallet.properties
@@ -3,3 +3,4 @@ backup.folder=${user.home}\\dash_backup\\
 node.propertySource=node_config/node_config_dash.properties
 node.zmqEnabled=true
 node.supportInstantSend=true
+node.isEnabled=false
