--- a/Controller/src/main/prod/merchants/b2x_wallet.properties
+++ b/Controller/src/main/prod/merchants/b2x_wallet.properties
@@ -3,3 +3,4 @@ backup.folder=/data/.b2x/b2x_backup/
 node.propertySource=node_config/node_config_b2x.properties
 node.zmqEnabled=true
 node.supportInstantSend=false
+node.isEnabled=true
