--- a/Controller/src/main/prod/merchants/bcd_wallet.properties
+++ b/Controller/src/main/prod/merchants/bcd_wallet.properties
@@ -3,3 +3,4 @@ backup.folder=/data/.bitcoindiamond/bcd_backup/
 node.propertySource=node_config/node_config_bcd.properties
 node.zmqEnabled=true
 node.supportInstantSend=false
+node.isEnabled=true
