--- a/Controller/src/main/prod/merchants/bitcoin_cash_wallet.properties
+++ b/Controller/src/main/prod/merchants/bitcoin_cash_wallet.properties
@@ -3,3 +3,4 @@ backup.folder=/data/.bitcoin_cash/bch_backup/
 node.propertySource=node_config/node_config_bch.properties
 node.zmqEnabled=true
 node.supportInstantSend=false
+node.isEnabled=true
