--- a/Controller/src/main/prod/merchants/bitcoin_gold_wallet.properties
+++ b/Controller/src/main/prod/merchants/bitcoin_gold_wallet.properties
@@ -3,3 +3,4 @@ backup.folder=/data/.bitcoin_gold/btg_backup/
 node.propertySource=node_config/node_config_btg.properties
 node.zmqEnabled=true
 node.supportInstantSend=false
+node.isEnabled=true
