--- a/Controller/src/main/uat/merchants/etherzero.properties
+++ b/Controller/src/main/uat/merchants/etherzero.properties
@@ -1,6 +1,6 @@
 #Main
 ethereum.currency = EtherZero
 ethereum.url = http://18.216.0.44:8102
-ethereum.destinationDir = D:\\Ethereum1\\EtherZero\\keystore\\
+ethereum.destinationDir = //data//etherzero//keystore//
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
 ethereum.mainAddress = 0x28474615cb8b5969ed699ab1c0be273fe0d53568
