--- a/Controller/src/main/dev/merchants/qtum.properties
+++ b/Controller/src/main/dev/merchants/qtum.properties
@@ -1,5 +1,5 @@
-qtum.node.endpoint=http://ec2-18-221-242-2.us-east-2.compute.amazonaws.com:38891
-#qtum.node.endpoint=http://127.0.0.1:38891
+#qtum.node.endpoint=http://ec2-18-221-242-2.us-east-2.compute.amazonaws.com:38891
+qtum.node.endpoint=http://127.0.0.1:38891
 qtum.node.user = wayfarer88
 qtum.node.password = Xlo8JfnWMur__7nZkEWxz6GgcX8SnzY6ZvJDr4qHU4c=
 qtum.min.confirmations = 20
