--- a/Controller/src/main/prod/merchants/ethereumClassic.properties
+++ b/Controller/src/main/prod/merchants/ethereumClassic.properties
@@ -4,3 +4,6 @@ ethereum.url = http://ip-172-31-14-168.us-east-2.compute.internal:8101
 ethereum.destinationDir = //data//ethereum_classic//keystore//
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
 ethereum.mainAddress = 0x6cF080280A37efF8f163F004B9da6962764368a0
+ethereum.minSumOnAccount = 0
+ethereum.minBalanceForTransfer = 0.0031
+
