--- a/Controller/src/main/prod/merchants/xbd_wallet.properties
+++ b/Controller/src/main/prod/merchants/xbd_wallet.properties
@@ -1,6 +1,6 @@
-wallet.password=KfUNj3EGzN48gEAwhSTCXn2NSDkbEPwfYurm
+wallet.password=p4nzTz56YS8ZkncYckfMBZUY2n32RyELQAvJ
 backup.folder=/data/.bitdollar/xbd_backup/
 node.propertySource=node_config/node_config_xbd.properties
-node.zmqEnabled=true
+node.zmqEnabled=false
 node.supportInstantSend=false
 node.isEnabled=true
