add props for rise integration

--- a/Controller/src/main/prod/merchants/bitcoin_white.properties
+++ b/Controller/src/main/prod/merchants/bitcoin_white.properties
@@ -1,7 +1,10 @@
-lisk.node.host=http://5.39.50.86:8196
+lisk.node.host=http://5.39.50.86
+lisk.node.port=8196
 lisk.main.address=10751039947056279805
 lisk.main.secret=
 lisk.min.confirmations=30
 lisk.tx.sort.prefix=t_
 lisk.tx.queryLimit=100
 lisk.tx.count.nodeType=NUMBER
+lisk.port.getAccount=8196
+lisk.port.sendTx=8196
