--- a/Controller/src/main/prod/merchants/ethereum.properties
+++ b/Controller/src/main/prod/merchants/ethereum.properties
@@ -1,7 +1,7 @@
 #Main
 ethereum.currency = Ethereum
-#ethereum.url = http://ip-172-31-14-168.us-east-2.compute.internal:8549/
-ethereum.url = http://172.31.14.168:8545/
+ethereum.url = http://172.31.14.168:8549/
+#ethereum.url = http://172.31.14.168:8545/
 #ethereum.url = http://13.59.242.131:8549
 ethereum.destinationDir = //data//ethereum//keystore//
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
