--- a/Controller/src/main/uat/job.properties
+++ b/Controller/src/main/uat/job.properties
@@ -6,4 +6,4 @@ btcInvoice.invoiceTimeOutIntervalMinutes = 60
 btcInvoice.blockNotifyUsers = true
 # to switch off set -1
 withdraw.rejectErrorTimeout=5
-withdraw.walletNotifyEmails=iamlukashenko@gmail.com,iamlukashenko+u1@gmail.com
+withdraw.walletNotifyEmails=iamlukashenko@gmail.com,sold0767@gmail.com 
