--- a/Controller/src/main/uat/mail.properties
+++ b/Controller/src/main/uat/mail.properties
@@ -11,4 +11,4 @@ mail_info.user=no-reply@exrates.top
 mail_info.password=E3ZW3397dV
 
 mail_info.allowedOnly=true
-mail_info.allowedEmails=golvazin@gmail.com,dju_m@ukr.net,mdovgodko@gmail.com,avto12@i.ua,alisatesting@gmail.com,natalitesting@gmail.com,iamlukashenko@gmail.com,iamlukashenko+u1@gmail.com
+mail_info.allowedEmails=golvazin@gmail.com,dju_m@ukr.net,mdovgodko@gmail.com,avto12@i.ua,alisatesting@gmail.com,natalitesting@gmail.com,iamlukashenko@gmail.com,sold0767@gmail.com
