--- a/Controller/src/main/dev/mail.properties
+++ b/Controller/src/main/dev/mail.properties
@@ -12,4 +12,4 @@ mail_info.password=E3ZW3397dV
 
 
 mail_info.allowedOnly=true
-mail_info.allowedEmails=golvazin@gmail.com,avto12@i.ua
+mail_info.allowedEmails=golvazin@gmail.com,avto12@i.ua,wayfarer2006@ukr.net
