--- a/Controller/src/main/dev/db.properties
+++ b/Controller/src/main/dev/db.properties
@@ -1,4 +1,4 @@
 db.user = root
 db.password = root
-db.url = jdbc:mysql://localhost:3306/birzha?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+db.url = jdbc:mysql://localhost:3306/birzha_2?useUnicode=true&characterEncoding=UTF-8&useSSL=false
 db.classname = com.mysql.jdbc.Driver
