--- a/Controller/src/main/dev/node_config/node_config_bbcc.properties
+++ b/Controller/src/main/dev/node_config/node_config_bbcc.properties
@@ -1,9 +1,9 @@
 node.bitcoind.rpc.protocol = http
-node.bitcoind.rpc.host = ec2-13-59-242-131.us-east-2.compute.amazonaws.com
+node.bitcoind.rpc.host = 172.31.14.169
 node.bitcoind.rpc.port = 12083
-node.bitcoind.rpc.user = devprod
-node.bitcoind.rpc.password = ZcergOfTzoSbDEFNdcxaEBRDRJh3VOOs-anma1viJPk=
+node.bitcoind.rpc.user = wayfarer88
+node.bitcoind.rpc.password = Xlo8JfnWMur__7nZkEWxz6GgcX8SnzY6ZvJDr4qHU4c=
 node.bitcoind.http.auth_scheme = Basic
-node.bitcoind.notification.alert.port = 6758
-node.bitcoind.notification.block.port = 6759
-node.bitcoind.notification.wallet.port = 6760
+node.bitcoind.notification.alert.port = 6778
+node.bitcoind.notification.block.port = 6779
+node.bitcoind.notification.wallet.port = 6780
