--- a/Controller/src/main/dev/merchants/ark.properties
+++ b/Controller/src/main/dev/merchants/ark.properties
@@ -1,7 +1,14 @@
-lisk.node.host=http://51.254.246.145:8196
+lisk.node.host= http://ip-172-31-30-170.us-east-2.compute.internal
+lisk.node.port=4002
 lisk.main.address=DSQJB8JXiiQXKdnZsWe7wVq5owMD4Jpekq
 lisk.main.secret=garlic hand finger rice derive fire twenty silent rather foot industry swap
 lisk.min.confirmations=30
 lisk.tx.sort.prefix=
 lisk.tx.queryLimit=1000
 lisk.tx.count.nodeType=STRING
+lisk.port.getAccount=4000
+lisk.port.sendTx=4000
+
+ark.createAccountEndpoint=/devnet/account
+ark.createTxEndpoint=/devnet/transaction
+ark.broadcastTxEndpoint=/devnet/broadcast
