add main address for prod

--- a/Controller/src/main/prod/merchants/rise_vision.properties
+++ b/Controller/src/main/prod/merchants/rise_vision.properties
@@ -1,6 +1,6 @@
 lisk.node.host=http://ip-172-31-14-168.us-east-2.compute.internal
 lisk.node.port=5555
-lisk.main.address=
+lisk.main.address=5465983647188469549R
 lisk.main.secret=
 lisk.min.confirmations=300
 lisk.tx.sort.prefix=
