--- a/Controller/src/main/dev/merchants/ark.properties
+++ b/Controller/src/main/dev/merchants/ark.properties
@@ -1,7 +1,7 @@
 lisk.node.host= http://ip-172-31-30-170.us-east-2.compute.internal
 lisk.node.port=4002
 lisk.main.address=DSQJB8JXiiQXKdnZsWe7wVq5owMD4Jpekq
-lisk.main.secret=garlic hand finger rice derive fire twenty silent rather foot industry swap
+lisk.main.secret=ecology chalk menu simple citizen dizzy segment scene wet imitate grant vintage
 lisk.min.confirmations=30
 lisk.tx.sort.prefix=
 lisk.tx.queryLimit=1000
