--- a/Controller/src/main/uat/merchants/ark.properties
+++ b/Controller/src/main/uat/merchants/ark.properties
@@ -1,4 +1,4 @@
-lisk.node.host=http://ec2-13-59-242-131.us-east-2.compute.amazonaws.com
+lisk.node.host=http://ip-172-31-30-170.us-east-2.compute.internal
 lisk.node.port=4002
 lisk.main.address=DPYyyrKsaiWEgjmHxxTJBMi7zahaAsmxa8
 lisk.main.secret=local repair certain naive antique orient infant dry wealth city remove verb
