--- a/Controller/src/main/prod/merchants/nushares_wallet.properties
+++ b/Controller/src/main/prod/merchants/nushares_wallet.properties
@@ -1,4 +1,4 @@
-wallet.password=
+wallet.password=G8ASRsXCXJe5ugjgvsKQnavk64wdrLjGmUkM
 backup.folder=/data/.nubits/nsr_backup/
 node.propertySource=node_config/node_config_nsr.properties
 node.zmqEnabled=false
