--- a/pom.xml
+++ b/pom.xml
@@ -362,7 +362,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>LATEST</version>
+			<version>2.8.2</version>
 		</dependency>
 
 		<dependency>
