--- a/Controller/src/main/dev/mail.properties
+++ b/Controller/src/main/dev/mail.properties
@@ -4,6 +4,12 @@ mail_support.protocol=smtp
 mail_support.user=exrates.dev@gmail.com
 mail_support.password=setarxe123
 
+mail_mandrill.host=smtp.mandrillapp.com
+mail_mandrill.port=587
+mail_mandrill.protocol=smtp
+mail_mandrill.user=Currency
+mail_mandrill.password=PsQhkDq7dB8Zn3qAserRTw
+
 mail_info.host=smtp.gmail.com
 mail_info.port=587
 mail_info.protocol=smtp
