fix prod config

--- a/Controller/src/main/prod/merchants/bbcc_wallet.properties
+++ b/Controller/src/main/prod/merchants/bbcc_wallet.properties
@@ -1,6 +1,6 @@
-wallet.password=a9qW7VEsE89XGGR4KV4ynsKuQ8hF5AZj
-backup.folder=${user.home}\\bbcc_backup\\
+wallet.password=tMVPjT6DaumNaMYAc9sehc2p2jt6VrFzsaN2
+backup.folder=/data/.bbcashcoin/bbcc_backup
 node.propertySource=node_config/node_config_bbcc.properties
 node.zmqEnabled=false
 node.supportInstantSend=false
-node.isEnabled=false
+node.isEnabled=true
