fix wallet pass

--- a/Controller/src/main/prod/merchants/beet_wallet.properties
+++ b/Controller/src/main/prod/merchants/beet_wallet.properties
@@ -1,4 +1,4 @@
-wallet.password=
+wallet.password=CN66hNvLY2FhEuFVMCLBQ2sxPA7cbC426xGB
 backup.folder=/data/.beetlecoin/beet_backup/
 node.propertySource=node_config/node_config_beet.properties
 node.zmqEnabled=false
