--- a/Controller/src/main/uat/merchants/perfectcoin_wallet.properties
+++ b/Controller/src/main/uat/merchants/perfectcoin_wallet.properties
@@ -1,5 +1,5 @@
 wallet.password=pass123
-backup.folder=/data/.perfectcoin/ptc_backup/
+backup.folder=/data/.perfectcoin_new/ptc_backup/
 node.propertySource=node_config/node_config_ptc.properties
 node.zmqEnabled=false
 node.supportInstantSend=false
