--- a/Controller/src/main/dev/merchants/achain.properties
+++ b/Controller/src/main/dev/merchants/achain.properties
@@ -1,4 +1,4 @@
 achain.node.url=http://127.0.0.1:8078/rpc
 achain.node.rpcUser=admin:123456
-achain.main_address=ACT54nD2uNstDg3AYfGJJ9g8ZxiC4RPs7EAG
-achain.account_name=newone
+achain.mainAddress=ACTfpTzidw5dusAkC4FEhy7CATPTJoo2khH
+achain.accountName=newone
