--- a/Controller/src/main/dev/merchants/decred.properties
+++ b/Controller/src/main/dev/merchants/decred.properties
@@ -1,4 +1,4 @@
-decred.rpcuser=Maks
-decred.rpcpass=HL4/aPb39FjIDDDULO+pTXa7WfyrndSy
-decred.server.ws.url=wss://localhost:9109/ws
-decred.mainAddress=
+decred.rpcuser=Maks1
+decred.rpcpass=HL4/aPb39FjIDDDULO+pTXa7WfyrndSy1
+decred.server.ws.url=ws://localhost:9109/ws
+decred.mainAddress=DsmYAtLzM3YCjHKSapidSy8d4udQfor3cKq
