--- a/pom.xml
+++ b/pom.xml
@@ -418,6 +418,12 @@
 			<version>3.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-all</artifactId>
+			<version>1.13.1</version>
+		</dependency>
+
 
 	</dependencies>
 
