--- a/Controller/src/main/dev/merchants/decred.properties
+++ b/Controller/src/main/dev/merchants/decred.properties
@@ -1,6 +1,5 @@
 decred.rpcuser=Maks1
 decred.rpcpass=HL4/aPb39FjIDDDULO+pTXa7WfyrndSy1
 decred.server.ws.url=ws://localhost:9109/ws
-decred.mainAddress=DsmYAtLzM3YCjHKSapidSy8d4udQfor3cKq
-decred.grpcServer.url=http://localhost:9111
-decred.rpc.url=http://localhost:9110
+decred.host=localhost
+decred.port=9111
