--- a/Controller/src/main/uat/merchants/decred.properties
+++ b/Controller/src/main/uat/merchants/decred.properties
@@ -1,5 +1,5 @@
 decred.rpcuser=Maks1
 decred.rpcpass=HL4/aPb39FjIDDDULO+pTXa7WfyrndSy1
-decred.server.ws.url=ws://localhost:9109/ws
-decred.host=localhost
+decred.server.ws.url=ws://172.31.0.148:9109/ws
+decred.host=172.31.0.148
 decred.port=9111
