--- a/Controller/src/main/prod/merchants/achain.properties
+++ b/Controller/src/main/prod/merchants/achain.properties
@@ -1,4 +1,4 @@
-achain.node.url=http://ip-172-31-14-168.us-east-2.compute.internal:8078/rpc
+achain.node.url=http://172.31.14.101:8078/rpc
 achain.node.rpcUser=admin:123456
-achain.mainAddress=ACT54nD2uNstDg3AYfGJJ9g8ZxiC4RPs7EAG
+achain.mainAddress=ACT2Jqvi9mJUfbJNvtmxpK8jmaZZNBtK9Spj
 achain.accountName=newone
