--- a/Controller/src/main/webapp/WEB-INF/web.xml
+++ b/Controller/src/main/webapp/WEB-INF/web.xml
@@ -20,10 +20,11 @@
         <location>/WEB-INF/jsp/errorPages/500.jsp</location>
     </error-page>
 
-    <!-- This will catch any exception -->
+    <!-- This will catch any exception
     <error-page>
         <location>/WEB-INF/jsp/errorPages/generalErrorPage.jsp</location>
     </error-page>
+    -->
 
     <servlet>
         <servlet-name>BotDetect Captcha</servlet-name>
