--- a/pom.xml
+++ b/pom.xml
@@ -419,6 +419,12 @@
 			<version>3.9.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jboss.aerogear</groupId>
+			<artifactId>aerogear-otp-java</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 
