--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ Status API Training Shop Blog About Pricing
 /script.sql
 /dev_exrates_dump.sql
 /Service/src/main/java/me/exrates/service/nem/test.java
+/decred
