Fix mail properties

--- a/Controller/src/main/dev/mail.properties
+++ b/Controller/src/main/dev/mail.properties
@@ -17,5 +17,5 @@ mail_info.user=exrates.dev@gmail.com
 mail_info.password=setarxe123
 
 
-mail_info.allowedOnly=false
-mail_info.allowedEmails=golvazin@gmail.com,avto12@i.ua,wayfarer2006@ukr.net,yagi7337@gmail.com,vlad.dziubak@gmail.com
+mail_info.allowedOnly=true
+mail_info.allowedEmails=golvazin@gmail.com,avto12@i.ua,wayfarer2006@ukr.net,yagi7337@gmail.com,yagi3773@gmail.com,vlad.dziubak@gmail.com
