easy send by pk

--- a/Controller/src/main/dev/merchants/tron.properties
+++ b/Controller/src/main/dev/merchants/tron.properties
@@ -1,3 +1,3 @@
 tron.full_node.url=http://18.220.99.189:8090
 tron.solidity_node_url=http://18.220.99.189:8091
-tron.mainAccountAddress=
+tron.mainAccountAddress=TKJarErjyeiNMVB6wnjvw2bdwkvZYkTqQh
