--- a/Controller/pom.xml
+++ b/Controller/pom.xml
@@ -79,11 +79,11 @@
             <version>1.3.1</version>
         </dependency>
 
-        <dependency>
+      <!--  <dependency>
             <groupId>com.captcha</groupId>
             <artifactId>botdetect-jsp20</artifactId>
             <version>4.0.alpha5</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <repositories>
