--- a/Security/pom.xml
+++ b/Security/pom.xml
@@ -41,11 +41,11 @@
             <artifactId>javax.json</artifactId>
             <version>${javax.json.version}</version>
         </dependency>
-       <!-- <dependency>
+        <dependency>
             <groupId>com.captcha</groupId>
             <artifactId>botdetect-jsp20</artifactId>
             <version>4.0.alpha5</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
