--- a/Controller/src/main/uat/db.properties
+++ b/Controller/src/main/uat/db.properties
@@ -1,7 +1,7 @@
-db.user = devprod
-db.password = Fh24soaf8sy3
-db.url = jdbc:mysql://prodex-replicatest.cedlveyttji9.us-east-2.rds.amazonaws.com:3306/birzha?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-db.classname = com.mysql.jdbc.Driver
+db.master.user = devprod
+db.master.password = Fh24soaf8sy3
+db.master.url = jdbc:mysql://prodex-replicatest.cedlveyttji9.us-east-2.rds.amazonaws.com:3306/birzha?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+db.master.classname = com.mysql.jdbc.Driver
 
 db.slave.user = devprod
 db.slave.password = Fh24soaf8sy3
