--- a/Controller/src/main/prod/merchants/eti.properties
+++ b/Controller/src/main/prod/merchants/eti.properties
@@ -1,6 +1,6 @@
 #Main
 ethereum.currency = Etherinc
-ethereum.url = http://localhost:9545
+ethereum.url = https://api.einc.io/jsonrpc/mainnet
 ethereum.destinationDir = D:\\Ethereum1\\Etherinc\\mainnet\\keystore\\
 ethereum.password = 061372f91f949effb934abadff5f0636de09113d
 ethereum.mainAddress = 0x2901d94cbd4aea467880e220E28168B15179526f
