--- a/pom.xml
+++ b/pom.xml
@@ -174,10 +174,6 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectj.version}</version>
 		</dependency>
-
-
-
-
 		<!--AspectJ-->
 
 
@@ -424,6 +420,12 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.4.1</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>4.2.0</version>
 		</dependency>
 
 	</dependencies>
