--- a/Controller/src/main/prod/merchants/cmk_wallet.properties
+++ b/Controller/src/main/prod/merchants/cmk_wallet.properties
@@ -1,4 +1,4 @@
-#wallet.password=pass123
+wallet.password=pass123
 backup.folder=/data/.cmk/cmk_backup/
 node.propertySource=node_config/node_config_cmk.properties
 node.zmqEnabled=true
