--- a/Controller/src/main/dev/merchants/adk.properties
+++ b/Controller/src/main/dev/merchants/adk.properties
@@ -2,5 +2,5 @@ node.adk.rpc.host = http://18.191.254.112:16322
 node.adk.rpc.user = wayfarer88
 node.adk.rpc.password = Xlo8JfnWMur__7nZkEWxz6GgcX8SnzY6ZvJDr4qHU4c=
 node.adk.notification.wallet.port = 167260
-node.isEnabled=false
+node.isEnabled=true
 wallet.password=pass123
