--- a/Controller/src/main/dev/node_config/node_config_adk.properties
+++ b/Controller/src/main/dev/node_config/node_config_adk.properties
@@ -4,4 +4,6 @@ node.bitcoind.rpc.port = 16322
 node.bitcoind.rpc.user = wayfarer88
 node.bitcoind.rpc.password = Xlo8JfnWMur__7nZkEWxz6GgcX8SnzY6ZvJDr4qHU4c=
 node.bitcoind.http.auth_scheme = Basic
-node.bitcoind.notification.wallet.port = 16323
+node.bitcoind.notification.alert.port = 147
+node.bitcoind.notification.block.port = 146
+node.bitcoind.notification.wallet.port = 169
