--- a/Controller/src/main/dev/merchants/adk.properties
+++ b/Controller/src/main/dev/merchants/adk.properties
@@ -3,4 +3,4 @@ node.adk.rpc.user = wayfarer88
 node.adk.rpc.password = Xlo8JfnWMur__7nZkEWxz6GgcX8SnzY6ZvJDr4qHU4c=
 node.adk.notification.wallet.port = 167260
 node.isEnabled=true
-wallet.password=pass123
+wallet.password=12345678
